2019-07-24  Akira Kakuto  <kakuto@w32tex.org>

	* texmf.cnf: Define command_line_encoding = utf-8 for
	Windows only.

2019-07-11  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.lua{,jit}hb{,la}tex): four new engines,
	luahbtex with/without jit, with/without latex. Same path as non-hb.

2019-06-02  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.harf{,la}tex): new engine.
	Turns out we want harf{,la}tex/ directories.

2019-05-05  Karl Berry  <karl@tug.org>

	* texmf.cnf: missed top 2018's.

2019-05-03  Karl Berry  <karl@tug.org>

	* version.ac: 6.3.2/dev since TL'19 is released.

2019-04-07  Karl Berry  <karl@freefriends.org>

	* TeX Live 2019.

2019-03-25  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (TEXMFDBS),
	* doc/kpathsea.texi (ls-R): attempt to describe the lack of
	disk searching when ls-R is present, regardless of !!, more clearly.
	Report from Yann Salmon, tex-k thread of 27 Feb 2019 21:00:46.
	* kpsewhich.c: doc fix.

2019-02-11  Karl Berry  <karl@tug.org>

	* version.ac,
	* texmf.cnf,
	* kpsewhich.c,
	* doc/kpathsea.texi: 6.3.1 for TL'19.

2019-01-19  Karl Berry  <karl@freefriends.org>

	* variable.h (kpathsea_var_expand): returns string "$FOO" if FOO
	is not defined, not the empty string; whereas ${FOO} does return
	the empty string. Maybe not the ideal interface, but seems
	undesirable to change now.
	* doc/kpathsea.texi (Programming with config files),
	(Auxiliary tasks): document this.
	Noted by Andreas Scherer, r49726.

2019-01-19  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFLOCALEDIR): define as $TEXMFMAIN/locale,
	for cweb translations now, and hopefully more later.

2018-12-30  Karl Berry  <karl@tug.org>

	* texmf.cnf (shell_escape_commands): make that r-mpost.

2018-12-24  Andreas Scherer <https://ascherer.github.io>

	* kpsewhich.c: Add missing format placeholder.

2018-12-21  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (shell_escape_commands): add rmpost.

2018-12-17  Karl Berry  <karl@freefriends.org>
