@@ -1,4 +1,5 @@
-# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Sat Mar 23 02:25:32 2019
+# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Fri Jul 26 00:17:10 2019
+# $Id: fmtutil-hdr.cnf 37176 2015-05-04 02:06:19Z preining $
 # Originally written by Thomas Esser, 1998. Public domain.
 #
 # As of TeX Live 2015, fmtutil reads *all* fmtutil.cnf files found.
@@ -76,6 +77,12 @@ dvilualatex luatex language.dat,language.dat.lua dvilualatex.ini
 lualatex luatex language.dat,language.dat.lua lualatex.ini
 #! luajitlatex luajittex language.dat,language.dat.lua lualatex.ini
 #
+# from latex-bin-dev:
+latex-dev pdftex language.dat -translate-file=cp227.tcx *latex.ini
+pdflatex-dev pdftex language.dat -translate-file=cp227.tcx *pdflatex.ini
+dvilualatex-dev luatex language.dat,language.dat.lua dvilualatex.ini
+lualatex-dev luatex language.dat,language.dat.lua lualatex.ini
+#
 # from lollipop:
 lollipop tex - lollipop.ini
 #
@@ -130,6 +137,7 @@ euptex euptex language.def *euptex.ini
 # from xetex:
 xetex xetex language.def -etex xetex.ini
 xelatex xetex language.dat -etex xelatex.ini
+xelatex-dev xetex language.dat -etex xelatex.ini
 #
 # from xmltex:
 xmltex pdftex language.dat *xmltex.ini
